--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "v1",
     "autoprefixer": "^10.4.7",
     "custom-cursor-react": "^1.0.5",
+    "framer-motion": "^12.9.7",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
     "next": "12.1.6",
@@ -21,6 +23,7 @@
     "react": "18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
